--- a/style.css
+++ b/style.css
@@ -3,11 +3,14 @@
     padding: 0;
     margin: 0;
     font-family: 'Germania One', 'sans-serif';
+    color: #fff;
 }
+body{
+    background-image: url("img/large_br.jpg");
+ }
 .heading_board, .resultText{
-    color: #537FE7;
     font-size: 30px;
-    margin: 0;
+    margin: 32px 0;
     text-align: center;
     text-transform: uppercase;
 }
@@ -16,27 +19,31 @@
     color: #ff605c;
 }
 .container{
-    margin:  16px auto;
+    margin:  24px auto;
     width: 1200px;
     display: flex;
     justify-content: space-between;
 
 }
 .sideBar{
-    width: 30%;
-    margin-left: 30px;
-    margin-top: 48px;
+    position: relative;
+    width: 25%;
+    height: 600px;
+    margin-left: 120px;
+    background: #40405c;
+    border-radius: 5px;
+    box-shadow: 2px 2px 10px 10px #6eb8e6;
 }
 .cv{
     width: 60%;
-    margin-left: 40px;
 }
 #breakout{
     position: relative;
-    background-image: url("img/br.jpg");
+    background: #040404;
     margin: 0 auto;
     text-align: center;
-    box-shadow: 5px 3px 7px #000000;
+    border-radius: 5px;
+    box-shadow: 2px 2px 10px 10px #6eb8e6;
 }
 .alertText{
     display: flex;
@@ -49,7 +56,7 @@
     width: 30px;
     height: 30px;
 }
-.scoreDiv, .lifeDiv, .lvDiv{
+.scoreDiv, .lifeDiv, .lvDiv, .sound_icon{
     display: flex;
     height: 30px;
     line-height: 30px;
@@ -61,37 +68,40 @@
 }
 
 .img{
-    width: 120px;
+    width: 170px;
     height: 80px;
     margin: auto;
     border-radius: 2px;
 }
 #play_again_btn{
-    background-image: url("img/replay.png");
-    background-repeat: no-repeat;
-    width: 100%;
-    height: 64%;
-    padding: 12px;
+    border-radius: 6px;
+    border: 2px solid white;
+    background: #7cd2d2;
+    padding: 12px 24px;
+    text-align: center;
+    font-size: 24px;
     display: none;
     margin: 54px 0 24px;
     cursor: pointer;
 }
 #start_btn{
-    background-image: url("img/Start-Button.png");
-    background-repeat: no-repeat;
-    width: 100%;
-    height: 100%;
+    border-radius: 6px;
+    border: 2px solid white;
+    background: #f45368;
     padding: 12px;
-    margin: 0 0 0 ;
+    text-align: center;
+    font-size: 24px;
+    margin: 0;
     cursor: pointer;
 }
 .gif{
-    width: 150px;
+    width: 170px;
     display: none;
     margin: auto;
 }
 .levelForm, select, option, input{
     font-size: 24px;
+    color: #000;
 }
 .levelForm{
     text-align: center;
@@ -99,5 +109,10 @@
 .labelText{
     font-size: 24px;
 }
-
+.sound_icon{
+    position: absolute;
+    bottom: 12px;
+    left: 0;
+    cursor: pointer;
+}
 
